<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Own The Night</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="genderMale">Male</string>
    <string name="genderFemale">Female</string>
    <string name="signUp">Sign Up</string>
    <string name="addcard">Add Card</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="phonenumber">Phone Number</string>

</resources>
